--- a/style/loader.css
+++ b/style/loader.css
@@ -3,13 +3,21 @@
     --item-color: red;
 
 }
-.loader-container{
-   width:100vw;
-   height:100vh;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+
+.loader-container {
+    position: absolute;
+    top:0;
+    left:0;
+    z-index: 100;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    container-type: inline-size;
 }
+
 .loader {
     width: 20rem;
     display: flex;
@@ -34,17 +42,17 @@
 
 .loader-item-small {
     --item-size: 2rem;
-    --item-color: linear-gradient(to right  ,#1d2b64,#f8cdda);
-    animation:rotate infinite 2s;
+    --item-color: linear-gradient(to right, #1d2b64, #f8cdda);
+    animation: rotate infinite 2s;
     animation-fill-mode: forwards;
 }
 
 .loader-item-medium {
     --item-size: 3rem;
-   
-    --item-color: linear-gradient(to right ,#e0c4fd,#8fc6fd);
 
-    animation: shrinkGrowAnimate  1s infinite ease-in;
+    --item-color: linear-gradient(to right, #e0c4fd, #8fc6fd);
+
+    animation: shrinkGrowAnimate 1s infinite ease-in;
     animation-delay: .33s;
 
 }
@@ -52,22 +60,24 @@
 
 .loader-item-large {
     --item-size: 4rem;
-    --item-color: linear-gradient(to right ,#2dc1e4,#e8ecc7);
+    --item-color: linear-gradient(to right, #2dc1e4, #e8ecc7);
 
-    animation: shrinkGrowAnimate  1s infinite ease-in;
+    animation: shrinkGrowAnimate 1s infinite ease-in;
 
 
 }
-.loader-content{
-    margin-top: 2rem;
+
+.loader-content {
+    margin-top: 2.5rem;
     font-family: inherit;
     letter-spacing: .1rem;
     word-spacing: .15rem;
-    font-size:2.4rem;
-    color:#444;
-  
+    font-size: 2.4rem;
+    color: #444;
+
 }
-.loader-dotes{
+
+.loader-dotes {
     margin-left: 1rem;
     width: 2rem;
     display: inline-block;
@@ -75,6 +85,7 @@
     font-size: 2.4rem;
     font-weight: 700;
 }
+
 @keyframes shrinkGrowAnimate {
     33% {
         scale: .9;
@@ -91,9 +102,21 @@
 
 
 }
-@keyframes rotate{
-100%{
+
+@keyframes rotate {
+    100% {
         rotate: 360deg;
     }
-  
+
+}
+
+@container (max-width:500px) {
+    .loader-content {
+        font-size: 1.6rem;
+    }
+}
+@container (max-width:300px) {
+    .loader-content {
+        font-size: 1.4rem;
+    }
 }
